--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/buttonStand"
         android:onClick="buttonStand"
-        android:background="#cceada"
+        android:background="@android:color/transparent"
         android:textColor="#000000"
         android:layout_alignBaseline="@+id/buttonHit"
         android:layout_alignBottom="@+id/buttonHit"
@@ -54,7 +54,7 @@
     <TextView
         android:id="@+id/player_result_text"
         android:textColor="#000000"
-        android:background="#ffffff"
+        android:background="@android:color/transparent"
         android:textStyle="bold"
         android:textSize="13dp"
         android:layout_width="265dp"
@@ -70,7 +70,7 @@
         android:id="@+id/dealer_result_text"
         android:textSize="13dp"
         android:textColor="#000000"
-        android:background="#fcf7f9"
+        android:background="@android:color/transparent"
         android:textStyle="bold"
         android:layout_width="265dp"
         android:layout_height="wrap_content"
@@ -84,25 +84,12 @@
         android:layout_alignEnd="@+id/result_text"/>
 
     <TextView
-        android:id="@+id/hand_display"
-        android:layout_height="wrap_content"
-        android:textSize="13dp"
-        android:textColor="#000000"
-        android:background="#ffffff"
-        android:textStyle="bold"
-        android:layout_width="265dp"
-        android:textAlignment="center"
-        android:layout_below="@+id/player_result_text"
-        android:layout_alignLeft="@+id/player_result_text"
-        android:layout_alignStart="@+id/player_result_text"/>
-
-    <TextView
         android:layout_width="265dp"
         android:layout_height="wrap_content"
         android:id="@+id/dealer_hand_display"
         android:textSize="13dp"
         android:textColor="#000000"
-        android:background="#fcf7f9"
+        android:background="@android:color/transparent"
         android:textStyle="bold"
         android:textAlignment="center"
         android:layout_marginBottom="43dp"
@@ -118,7 +105,7 @@
         android:id="@+id/result_text"
         android:textSize="13dp"
         android:textColor="#000000"
-        android:background="#fcf0f5"
+        android:background="@android:color/transparent"
         android:textAlignment="center"
         android:textStyle="bold"
         android:layout_marginTop="26dp"
@@ -133,13 +120,27 @@
         android:gravity="center"
         android:onClick="buttonHit"
         android:textColor="#000000"
-        android:background="#cceada"
+        android:background="@android:color/transparent"
         android:layout_marginTop="81dp"
         android:layout_marginLeft="11dp"
         android:layout_marginStart="11dp"
         android:layout_below="@+id/result_text"
         android:layout_alignLeft="@+id/result_text"
         android:layout_alignStart="@+id/result_text"/>
+
+    <TextView
+        android:id="@+id/hand_display"
+        android:layout_height="wrap_content"
+        android:textSize="13dp"
+        android:textColor="#000000"
+        android:background="@android:color/transparent"
+        android:textStyle="bold"
+        android:layout_width="265dp"
+        android:textAlignment="center"
+        android:layout_marginTop="16dp"
+        android:layout_below="@+id/player_result_text"
+        android:layout_alignLeft="@+id/player_result_text"
+        android:layout_alignStart="@+id/player_result_text"/>
 
 
 </RelativeLayout>
