--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,22 +34,10 @@
         android:onClick="buttonDeal"
         android:background="#cceada"
         android:textColor="#000000"
+        android:fontFamily="roboto"
         android:layout_alignBaseline="@+id/textView"
         android:layout_alignBottom="@+id/textView"
         android:layout_centerHorizontal="true"/>
-
-    <Button
-        android:text="@string/stand"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/buttonStand"
-        android:onClick="buttonStand"
-        android:background="@android:color/transparent"
-        android:textColor="#000000"
-        android:layout_alignBaseline="@+id/buttonHit"
-        android:layout_alignBottom="@+id/buttonHit"
-        android:layout_toRightOf="@+id/buttonDeal"
-        android:layout_toEndOf="@+id/buttonDeal"/>
 
     <TextView
         android:id="@+id/player_result_text"
@@ -59,6 +47,7 @@
         android:textSize="13dp"
         android:layout_width="265dp"
         android:layout_height="wrap_content"
+        android:fontFamily="roboto"
         android:textAlignment="center"
         android:layout_weight="0.1"
         android:layout_marginTop="97dp"
@@ -67,21 +56,64 @@
         android:layout_alignStart="@+id/buttonHit"/>
 
     <TextView
-        android:id="@+id/dealer_result_text"
+        android:layout_width="265dp"
+        android:layout_height="20dp"
+        android:id="@+id/result_text"
+        android:textSize="13dp"
+        android:fontFamily="roboto"
+        android:textColor="#000000"
+        android:background="@android:color/transparent"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:layout_marginTop="26dp"
+        android:layout_below="@+id/buttonDeal"
+        android:layout_centerHorizontal="true"/>
+
+    <TextView
+        android:id="@+id/hand_display"
+        android:layout_height="wrap_content"
         android:textSize="13dp"
         android:textColor="#000000"
         android:background="@android:color/transparent"
         android:textStyle="bold"
         android:layout_width="265dp"
-        android:layout_height="wrap_content"
+        android:fontFamily="roboto"
         android:textAlignment="center"
-        android:layout_weight="0.1"
-        android:layout_above="@+id/dealer_hand_display"
-        android:layout_alignLeft="@+id/dealer_hand_display"
-        android:layout_alignStart="@+id/dealer_hand_display"
-        android:layout_marginBottom="11dp"
-        android:layout_alignRight="@+id/result_text"
-        android:layout_alignEnd="@+id/result_text"/>
+        android:layout_marginTop="16dp"
+        android:layout_below="@+id/player_result_text"
+        android:layout_alignLeft="@+id/player_result_text"
+        android:layout_alignStart="@+id/player_result_text"/>
+
+    <Button
+        android:text="@string/stand"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/buttonStand"
+        android:onClick="buttonStand"
+        android:fontFamily="roboto"
+        android:background="@android:color/transparent"
+        android:textColor="#000000"
+        android:layout_alignBaseline="@+id/buttonHit"
+        android:layout_alignBottom="@+id/buttonHit"
+        android:layout_toRightOf="@+id/buttonDeal"
+        android:layout_toEndOf="@+id/buttonDeal"/>
+
+    <Button
+        android:id="@+id/buttonHit"
+        android:text="@string/hit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:onClick="buttonHit"
+        android:fontFamily="roboto"
+        android:textColor="#000000"
+        android:background="@android:color/transparent"
+        android:layout_marginTop="78dp"
+        android:layout_marginLeft="11dp"
+        android:layout_marginStart="11dp"
+        android:layout_below="@+id/result_text"
+        android:layout_alignLeft="@+id/result_text"
+        android:layout_alignStart="@+id/result_text"/>
 
     <TextView
         android:layout_width="265dp"
@@ -92,7 +124,8 @@
         android:background="@android:color/transparent"
         android:textStyle="bold"
         android:textAlignment="center"
-        android:layout_marginBottom="43dp"
+        android:layout_marginBottom="35dp"
+        android:fontFamily="roboto"
         android:layout_alignParentBottom="true"
         android:layout_alignLeft="@+id/hand_display"
         android:layout_alignStart="@+id/hand_display"
@@ -100,47 +133,22 @@
         android:layout_alignEnd="@+id/result_text"/>
 
     <TextView
-        android:layout_width="265dp"
-        android:layout_height="20dp"
-        android:id="@+id/result_text"
-        android:textSize="13dp"
-        android:textColor="#000000"
-        android:background="@android:color/transparent"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:layout_marginTop="26dp"
-        android:layout_below="@+id/buttonDeal"
-        android:layout_centerHorizontal="true"/>
-
-    <Button
-        android:id="@+id/buttonHit"
-        android:text="@string/hit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:onClick="buttonHit"
-        android:textColor="#000000"
-        android:background="@android:color/transparent"
-        android:layout_marginTop="81dp"
-        android:layout_marginLeft="11dp"
-        android:layout_marginStart="11dp"
-        android:layout_below="@+id/result_text"
-        android:layout_alignLeft="@+id/result_text"
-        android:layout_alignStart="@+id/result_text"/>
-
-    <TextView
-        android:id="@+id/hand_display"
-        android:layout_height="wrap_content"
+        android:id="@+id/dealer_result_text"
         android:textSize="13dp"
         android:textColor="#000000"
         android:background="@android:color/transparent"
         android:textStyle="bold"
         android:layout_width="265dp"
+        android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:layout_marginTop="16dp"
-        android:layout_below="@+id/player_result_text"
-        android:layout_alignLeft="@+id/player_result_text"
-        android:layout_alignStart="@+id/player_result_text"/>
+        android:fontFamily="roboto"
+        android:layout_weight="0.1"
+        android:layout_above="@+id/dealer_hand_display"
+        android:layout_alignLeft="@+id/dealer_hand_display"
+        android:layout_alignStart="@+id/dealer_hand_display"
+        android:layout_marginBottom="10dp"
+        android:layout_alignRight="@+id/dealer_hand_display"
+        android:layout_alignEnd="@+id/dealer_hand_display"/>
 
 
 </RelativeLayout>
